--- a/javascript_tools/package.json
+++ b/javascript_tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": " ",
+  "name": "Javascript_Tools",
   "version": "0.0.1",
   "description": "",
   "keywords": "",
@@ -13,5 +13,8 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "stylelint": "^13.7.1"
   }
 }
