--- a/javascript_tools/package.json
+++ b/javascript_tools/package.json
@@ -15,6 +15,9 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "stylelint": "^13.7.1"
+    "node": "^14.11.0",
+    "stylelint": "^13.7.1",
+    "xhr2": "^0.2.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
