--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "<savio591@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --mode development"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/cli": "^7.12.1",
